syntax = "proto3";

package protocol;

option go_package = "github.com/13k/night-stalker/internal/protobuf/protocol";

import "protocol/enums.proto";
import "protocol/match.proto";
import "protocol/player.proto";

message Hero {
  uint64 id = 1;
  string name = 2;
  string localized_name = 3;
  string slug = 4;
  repeated string aliases = 5;
  repeated protocol.HeroRole roles = 6;
  repeated int64 role_levels = 7;
  int64 complexity = 8;
  int64 legs = 9;
  protocol.DotaAttribute attribute_primary = 10;
  protocol.DotaUnitCap attack_capabilities = 11;
}

message HeroMatches {
  protocol.Hero hero = 100;
  repeated protocol.Match matches = 101;
  repeated protocol.Player known_players = 102;
}
